[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helm-previewer"
version = "0.2.0"
description = "A FastAPI-based viewer for Helm charts with interactive visualization"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Helm Previewer Team", email = "contact@helm-previewer.dev"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "pyyaml",
    "networkx",
    "numpy",
    "plotly",
    "pydantic",
    "python-multipart",
    "aiofiles",
    "typer",
    "rich",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
helm-previewer = "helm_previewer.cli:app"

[project.urls]
Homepage = "https://github.com/ygdrax/helm-previewer"
Repository = "https://github.com/ygdrax/helm-previewer"
Issues = "https://github.com/ygdrax/helm-previewer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/helm_previewer"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["helm_previewer"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
