[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helm-previewer"
version = "0.0.1"
description = "A CLI tool for visualizing Helm chart structure and dependencies"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "ygdrax", email = "hireclaudiu@protonmail.com"},
]
keywords = ["helm", "kubernetes", "visualization", "devops", "charts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.0.0",
    "pyyaml",
    "networkx",
    "numpy",
    "plotly",
    "pydantic",
    "rich",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
]
build = [
    "build>=1.3.0",
    "twine>=6.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/helm_previewer/visualizer.py" = ["E501"]  # Allow long lines in HTML templates

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["helm_previewer"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[project.scripts]
helm-previewer = "helm_previewer.cli:cli"

[project.urls]
Homepage = "https://github.com/ygdrax/helm-previewer"
Repository = "https://github.com/ygdrax/helm-previewer"
Issues = "https://github.com/ygdrax/helm-previewer/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/helm_previewer"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]
